fix: pxdesign infer + import fix, update workflow diagram
Use pxdesign infer instead of pipeline to avoid chain-ID crash; fix
hepn_structural_stitch import; update diagram to match current flow.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ numpy
 biopython
 protenix
 
+# Optional, for validate_crispr_repeats.py (CRISPR repeat structure validation):
+# ViennaRNA  # pip install ViennaRNA  OR  conda install -c bioconda viennarna
